# FS

./: .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile
docs/doxygen-custom/: header.html
lib/: CMakeLists.txt
src/: BinSerializer.cpp  BinSerializer.hpp  CMakeLists.txt  Empty.hpp  Filesystem.cpp  Filesystem.hpp  FilesystemInfo.hpp  Full.hpp  ISerializer.hpp  UtilsFunctions.hpp  main.cpp
src/commands/: CMakeLists.txt  Copy.cpp  Copy.h  Del.cpp  Del.h  Empty.cpp  Empty.h  Enter.cpp  Enter.h  FSCommandFactory.hpp  FSCommands.hpp  Full.cpp  Full.h  Help.cpp  Help.h  Init.cpp  Init.h  Init.hpp  Move.cpp  Move.h  Squeeze.cpp  Squeeze.h
src/dto/: FileRecord.hpp  FilesystemInfo.hpp  FilesystemSegment.hpp
src/exceptions/: FileCannotCreate.hpp  FileNotFoundException.hpp  FileWriteException.hpp  FilesystemCorruptedException.hpp  FilesystemException.hpp  FilesystemNotInitializedException.hpp  IOException.hpp  InvalidFileFormatException.hpp  NotImplementedException.hpp  UnexpectedEndOfFileException.hpp
src/serializer/: BinSerializer.cpp  BinSerializer.hpp  ISerializer.hpp
test/: CMakeLists.txt  commandFactoryTest.cpp  input.txt  output.txt  records.in  records.out  test.sh
